Fix container; Fix calc to allow elements correct alignment on home block clicking feature, which at the moment was broken, because there is multiple references or different wrapper classes on the project;

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,8 +1,6 @@
 .home-content {
   .wrapper {
-    padding-left: 60px;
-    padding-right: 60px;
-    margin: 0 auto;
+    margin: 0 60px;
     max-width: 1200px;
     .logo-home {
       height: 60vh;
@@ -20,6 +18,7 @@
       height: 60vh;
       position: fixed;
       z-index: 10;
+      pointer-events: none;
       .block {
         background-color: $yellow;
         width: 100%;
